--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Week 5 Assignment</title>
-  </head>
-  <body>
-    <h1>Week 5 Assignment - Part 2</h1>
-    <p>See console for output.</p>
-    <!-- Create an unordered list with any questions you have -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Week 5 Assignment</title>
+</head>
+
+<body>
+  <div class="villain">
+
+    <header>
+      <h1>Week 5 Assignment - Part 2</h1>
+      <h2>Toivo's record shop</h2>
+    </header>
+    <main>
+      <p>See console for output.</p>
+    </main>
+
+
+  </div>
+  <!-- Create an unordered list with any questions you have -->
+</body>
+
 </html>
